# build/swagger.json
@@ -235,12 +235,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"anyOf": [
-										{
-											"$ref": "#/components/schemas/RefreshTokenResponse"
-										},
-										{}
-									]
+									"$ref": "#/components/schemas/RefreshTokenResponse"
 								}
 							}
 						}
